# mcp-servers

./: .gitignore  LICENSE  README.md  flake.nix
things3-mcp/: README.md  pyproject.toml
things3-mcp/src/things3_mcp/: __init__.py  server.py
